<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tlb_lobby"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lobby">

    <include
        android:id="@+id/include"
        layout="@layout/persondos" />

    <Button
        android:id="@+id/lobby_btn_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="toGuest"
        android:text="@string/lobby_btn_guest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <Button
        android:id="@+id/lobby_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="toLogin"
        android:text="@string/lobby_btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lobby_btn_guest" />

    <Button
        android:id="@+id/lobby_btn_singup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:onClick="toSingup"
        android:text="@string/lobby_btn_singup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lobby_btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>