<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TorneoAdmin" >

        <include
            android:id="@+id/include"
            layout="@layout/personalizado" />

        <EditText
            android:id="@+id/et_torneo_name"
            android:layout_width="305dp"
            android:layout_height="75dp"
            android:layout_marginTop="68dp"
            android:ems="10"
            android:hint="@string/torneo_new_name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <Button
            android:id="@+id/btn_torneo_registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="postLeague"
            android:text="@string/torneo_new_registrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_torneo_apert" />

        <EditText
            android:id="@+id/et_torneo_apert"
            android:layout_width="305dp"
            android:layout_height="75dp"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/torneo_new_apertura"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_torneo_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
